Add the Global Styles support to the blocks in an opt-in way

--- a/packages/block-library/src/media-text/style.scss
+++ b/packages/block-library/src/media-text/style.scss
@@ -1,7 +1,9 @@
-.wp-block-media-text {
+.wp-gs .wp-block-media-text {
 	background-color: var(--wp--color--background);
 	color: var(--wp--color--text);
+}
 
+.wp-block-media-text {
 	// This block's direction should not be manipulated by rtl, as the mediaPosition control does.
 	/*!rtl:begin:ignore*/
 	direction: ltr;
