--- a/packages/block-library/src/paragraph/style.scss
+++ b/packages/block-library/src/paragraph/style.scss
@@ -1,4 +1,4 @@
-:root p {
+.wp-gs p {
 	background-color: var(--wp--color--background);
 	color: var(--wp--color--text);
 	line-height: var(--wp--typography--line-height);
