--- a/packages/block-library/src/columns/style.scss
+++ b/packages/block-library/src/columns/style.scss
@@ -1,8 +1,11 @@
+.wp-gs .wp-block-columns {
+	background-color: var(--wp--color--background);
+	color: var(--wp--color--text);
+}
+
 .wp-block-columns {
 	display: flex;
 	margin-bottom: $default-block-margin;
-	background-color: var(--wp--color--background);
-	color: var(--wp--color--text);
 
 	// Responsiveness: Allow wrapping on mobile.
 	flex-wrap: wrap;
